--- a/QuanLyKhachSan/src/com/exemple/views/QuanLyNhanVienJPanel.form
+++ b/QuanLyKhachSan/src/com/exemple/views/QuanLyNhanVienJPanel.form
@@ -609,7 +609,7 @@
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                    <TitledBorder title="T&#xec;m ki&#x1ebf;m">
+                    <TitledBorder title="T&#xec;m ki&#x1ebf;m theo t&#xea;n">
                       <Font PropertyName="font" name="Tahoma" size="11" style="1"/>
                     </TitledBorder>
                   </Border>
@@ -638,12 +638,8 @@
                 <Component class="javax.swing.JTextField" name="txtSearch">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Tahoma" size="12" style="2"/>
+                      <Font name="Tahoma" size="12" style="1"/>
                     </Property>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="99" green="99" red="99" type="rgb"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="Nh&#x1ead;p H&#x1ecd; T&#xea;n &#x111;&#x1ec3; t&#xec;m ki&#x1ebf;m...."/>
                     <Property name="toolTipText" type="java.lang.String" value=""/>
                   </Properties>
                   <Events>
